# prefect-operator

./: .dockerignore  .envrc  .gitignore  .golangci.yml  .mise.toml  .pre-commit-config.yaml  .yamllint  AGENTS.md  Dockerfile  Makefile  PROJECT  PrefectAutomation.md  PrefectDeployment.md  PrefectServer.md  PrefectWorkPool.md  README.md  artifacthub-repo.yml  crds.yaml  create-prefect-deployment.py  deploy-example  example.yaml  go.mod  go.sum  index.yaml  operator.yaml  prefect_operator.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sync-pre-commit
.github/: CODEOWNERS  codeql-config.yml
charts/: prefect-operator-2024.10.11150540.tgz  prefect-operator-2024.10.11150540.tgz.prov  prefect-operator-2024.10.1192657.tgz  prefect-operator-2024.10.1192657.tgz.prov  prefect-operator-2024.10.16013409-dev.tgz  prefect-operator-2024.10.16013409-dev.tgz.prov  prefect-operator-2024.10.16015937-dev.tgz  prefect-operator-2024.10.16015937-dev.tgz.prov  prefect-operator-2024.10.16020644-dev.tgz  prefect-operator-2024.10.16020644-dev.tgz.prov  prefect-operator-2024.10.17142453-dev.tgz  prefect-operator-2024.10.17142453-dev.tgz.prov  prefect-operator-2024.10.21192724-dev.tgz  prefect-operator-2024.10.21192724-dev.tgz.prov  prefect-operator-2024.10.24203523-dev.tgz  prefect-operator-2024.10.24203523-dev.tgz.prov  prefect-operator-2024.10.28181521-dev.tgz  prefect-operator-2024.10.28181521-dev.tgz.prov  prefect-operator-2024.10.30160605-dev.tgz  prefect-operator-2024.10.30160605-dev.tgz.prov  prefect-operator-2024.10.30195247-dev.tgz  (+219 more)
(+173 files in other folders)
