[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "prefect-operator"
requires-python = ">=3.11"

dynamic = ["version"]

[project.scripts]
prefect-operator = "prefect_operator.__main__:main"

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "--cov prefect_operator --cov tests --cov-branch --cov-report=term-missing"
testpaths = [
    "tests"
]
